<resources>
    <string name="app_name">Inmobiliaria</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Perfil">Perfil</string>
    <string name="Propiedades">Propiedades</string>
    <string name="DetallePropiedad">Detalle de Propiedad</string>
    <string name="Inquilinos">Inquilinos</string>
    <string name="Pagos">Pagos</string>
    <string name="ListaDePagos">Lista de Pagos</string>
    <string name="Contratos">Contratos</string>
    <string name="ListaDeContratos">Lista de Contratos</string>
    <string name="CerrarSesion">Cerrar Sesión</string>
</resources>