<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/perfilFragment"
            android:icon="@drawable/perfil"
            android:title="@string/Perfil" />
        <item
            android:id="@+id/propiedadesFragment"
            android:icon="@drawable/propiedades"
            android:title="@string/Propiedades" />
        <item
            android:id="@+id/inquilinosFragment"
            android:icon="@drawable/inquilinos"
            android:title="@string/Inquilinos" />
        <item
            android:id="@+id/pagosFragment"
            android:icon="@drawable/pagos"
            android:title="@string/Pagos"/>
        <item
            android:id="@+id/contratosFragment"
            android:icon="@drawable/contratos"
            android:title="@string/Contratos"/>
        <item
            android:id="@+id/cerrarSesionFragment"
            android:icon="@drawable/cerrarsesion"
            android:title="@string/CerrarSesion"/>

    </group>
</menu>